Bug 223874 - arm64: kernel does not build with DIAGNOSTIC enabled
Summary: arm64: kernel does not build with DIAGNOSTIC enabled
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: arm (show other bugs)
Version: CURRENT
Hardware: arm Any
: --- Affects Only Me
Assignee: Andrew Turner
URL: https://reviews.freebsd.org/D13243
Keywords:
Depends on:
Blocks:
 
Reported: 2017-11-25 22:33 UTC by Ed Maste
Modified: 2020-06-10 21:09 UTC (History)
0 users

See Also:
emaste: mfc-stable11?
emaste: mfc-stable10-
emaste: mfc-stable9-


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ed Maste freebsd_committer freebsd_triage 2017-11-25 22:33:11 UTC
Attempting to build arm64 with options DIAGNOSTIC enabled in kernel config results in:

--- pmap.o ---
/root/freebsd/sys/arm64/arm64/pmap.c:900:1: error: no previous prototype for function 'pmap_invalidate_page' [-Werror,-Wmissing-prototypes]
pmap_invalidate_page(pmap_t pmap, vm_offset_t va)
^
/root/freebsd/sys/arm64/arm64/pmap.c:914:1: error: no previous prototype for function 'pmap_invalidate_range' [-Werror,-Wmissing-prototypes]
pmap_invalidate_range(pmap_t pmap, vm_offset_t sva, vm_offset_t eva)
^
/root/freebsd/sys/arm64/arm64/pmap.c:931:1: error: no previous prototype for function 'pmap_invalidate_all' [-Werror,-Wmissing-prototypes]
pmap_invalidate_all(pmap_t pmap)
^
Comment 1 commit-hook freebsd_committer freebsd_triage 2017-11-26 09:29:51 UTC
A commit references this bug:

Author: andrew
Date: Sun Nov 26 09:29:34 UTC 2017
New revision: 326225
URL: https://svnweb.freebsd.org/changeset/base/326225

Log:
  Make the arm64 pmap_invalidate functions static inline. This fixes building
  with DIAGNOSTIC.

  PR:		223874
  Reported by:	emaste
  MFC after:	1 week

Changes:
  head/sys/arm64/arm64/pmap.c
Comment 2 Eitan Adler freebsd_committer freebsd_triage 2018-05-28 19:45:48 UTC
batch change:

For bugs that match the following
-  Status Is In progress 
AND
- Untouched since 2018-01-01.
AND
- Affects Base System OR Documentation

DO:

Reset to open status.


Note:
I did a quick pass but if you are getting this email it might be worthwhile to double check to see if this bug ought to be closed.
Comment 3 Ed Maste freebsd_committer freebsd_triage 2018-10-04 01:09:48 UTC
MFC?
Comment 4 Ed Maste freebsd_committer freebsd_triage 2020-06-10 21:09:00 UTC
MFC OBE (timeout)