Make the arm64 pmap_invalidate functions static inline. This fixes building with DIAGNOSTIC.

PR:		223874
Reported by:	emaste
MFC after:	1 week

Former-commit-id: 483f25a761a80ae2f201026215faa3fd59e474b4